--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.38",
-    "axios": "^1.6.2"
+    "@chakra-ui/vue": "^0.13.1",
+    "@chakra-ui/vue-next": "^1.0.0-alpha.16",
+    "@emotion/css": "^11.13.4",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "axios": "^1.6.2",
+    "framer-motion": "^11.11.9",
+    "vue": "^3.4.38"
   },
   "devDependencies": {
+    "@types/node": "^22.7.7",
     "@vitejs/plugin-vue": "^5.1.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
