--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/css": "^11.13.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.2",
     "framer-motion": "^11.11.9",
     "vue": "^3.4.38"
