--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "vue-character-table",
+  "name": "vite-vue-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "@chakra-ui/vue": "^0.13.1",
-    "@chakra-ui/vue-next": "^1.0.0-alpha.16",
-    "@emotion/css": "^11.13.4",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@vercel/analytics": "^1.3.1",
-    "axios": "^1.6.2",
-    "framer-motion": "^11.11.9",
-    "vue": "^3.4.38"
+    "vue": "^3.4.38",
+    "vue-router": "^4.2.0",
+    "pinia": "^2.1.0",
+    "axios": "^1.6.0",
+    "vue-i18n": "^9.8.0"
   },
   "devDependencies": {
-    "@types/node": "^22.7.7",
+    "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
-    "vue-tsc": "^2.1.4"
+    "vue-tsc": "^2.1.4",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^3.0.0",
+    "sass": "^1.69.0"
   }
 }
